--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-pandas==1.1.4
-plotly==5.14.0
-rich==13.3.3
-streamlit==1.20.0
+pandas==2.0.3
+plotly==5.22.0
+rich==13.7.1
+streamlit==1.30.0
 tabulate==0.9.0
+watchdog==4.0.1
